--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.10",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "angular-in-memory-web-api": "^0.11.0",
+    "ng-zorro-antd": "^11.4.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
